# GIForth

./: README.md
GIForth/: .gitignore  CMakeLists.txt
GIForth/GIForth/: ExecutionContext.cpp  ExecutionContext.hpp  FMemory.cpp  FMemory.hpp  ForthArchitecture.cpp  ForthArchitecture.hpp  ForthDictionary.cpp  ForthDictionary.hpp  ForthDictionaryWord.cpp  ForthDictionaryWord.hpp  ForthExecutionContext.cpp  ForthExecutionContext.hpp  ForthInstruction.cpp  ForthInstruction.hpp  ForthInterpreter.cpp  ForthInterpreter.hpp  ForthMemory.cpp  ForthMemory.hpp  ForthWord.cpp  ForthWord.hpp  Interp.rtf  Interp.txt  InterpTopDown.txt  Interpreter.cpp  Interpreter.hpp  NativeOSFunctions.cpp  main.cpp
GIForth/GIForth.xcodeproj/: project.pbxproj
GIForth/GIForth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GIForth/GIForth.xcodeproj/project.xcworkspace/xcuserdata/Dad.xcuserdatad/: UserInterfaceState.xcuserstate
GIForth/GIForth.xcodeproj/xcuserdata/Dad.xcuserdatad/xcschemes/: xcschememanagement.plist
GIForth/GIForth/compiler/: BasicForthVocab.cpp  BasicForthVocab.h  CompilerWords.cpp  CompilerWords.h  ForthVocab.cpp  ForthVocab.h
GIForth/GIForth/compiler/tests/: CompilerWordsTest.cpp  CompilerWordsTest.h
GIForth/GIForth/oldruntime/: ForthExecutionContext.cpp  ForthInstruction.hpp  Interpreter.cpp  NativeOSFunctions.cpp  NativeOSFunctions.hpp
GIForth/GIForth/runtime/: BasicForthVocab.cpp  BasicForthVocab.h  CompilerWords.cpp  CompilerWords.h  CompositeForthWord.cpp  CompositeForthWord.h  CompositeForthWordWords.cpp  CompositeForthWordWords.h  ForthCell.h  ForthExecutionFrame.h  ForthThread.cpp  ForthThread.h  ForthThreadLocal.cpp  ForthThreadLocal.h  ForthVocab.cpp  ForthVocab.h  ForthWord.cpp  ForthWord.h  InterpretableForthWord.cpp  InterpretableForthWord.h  NativeOSFunctions.cpp  NativeOSFunctions.hpp  PrimitiveForthWords.cpp  PrimitiveForthWords.h
GIForth/GIForth/runtime/tests/: CompilerWordsTest.cpp  CompositeForthWordTest.cpp  CompositeForthWordTest.h  CompositeForthWordWordsTest.cpp  ForthVocabTest.cpp  PrimitiveForthWordsTest.cpp
GIForth/GIForth/runtime/utils/: CompositeForthWordBuilder.cpp  CompositeForthWordBuilder.h  PrimitiveForthWordFunction.cpp  PrimitiveForthWordFunction.h
GIForth/GIForth/utils/: CompositeForthWordBuilder.cpp  CompositeForthWordBuilder.h  NativeOSFunctions.cpp  NativeOSFunctions.hpp  PrimativeForthWordFunction.cpp  PrimativeForthWordFunction.h  PrimativeForthWordMemberFunction.cpp  PrimativeForthWordMemberFunction.h  PrimitiveForthWordFunction.cpp  PrimitiveForthWordFunction.h  PrimitiveForthWordMemberFunction.cpp  PrimitiveForthWordMemberFunction.h  StringUtils.cpp  StringUtils.h  TestRunner.cpp  TestRunner.h
GIForth/GIForth/utils/testing/: TestRunner.cpp  TestRunner.h  debug.h
GIForth/GIForth/utils/tests/: StringUtilsTest.cpp  StringUtilsTest.h
GIForth/GIForth/words/: CoreForthWords.cpp  CoreForthWords.h  HelloWorldWord.cpp  HelloWorldWord.h  PrimitiveForthWords.cpp  PrimitiveForthWords.h  VocabWords.cpp  VocabWords.h
GIForth/GIForth/words/bootstrap/: BootstrapInterp.cpp  BootstrapInterp.h  BootstrapWords.cpp  BootstrapWords.h  CompositeForthWordBuilder.cpp  CompositeForthWordBuilder.h
GIForth/GIForth/words/bootstrap/tests/: BootstrapInterpTest.cpp  BootstrapWordsTest.cpp  BootstrapWordsTest.h
GIForth/GIForth/words/compiler/: BasicForthVocab.cpp  BasicForthVocab.h  CompilerDeferredVocab.cpp  CompilerDeferredVocab.h  CompilerImmediateVocab.cpp  CompilerImmediateVocab.h  CompilerWords.cpp  CompilerWords.h  ForthVocab.cpp  ForthVocab.h
GIForth/GIForth/words/compiler/tests/: CompilerWordsTest.cpp
GIForth/GIForth/words/interpreter/: BootstrapInterp.cpp  BootstrapWords.cpp  BootstrapWords.h  OuterInterp.cpp  OuterInterp.h  OuterInterpVocab.cpp  OuterInterpVocab.h
GIForth/GIForth/words/interpreter/tests/: BootstrapInterpTest.cpp  BootstrapInterpTest.h  BootstrapWordsTest.cpp  OuterInterpTest.cpp  OuterInterpTest.h
GIForth/GIForth/words/tests/: CoreForthWordsTest.cpp  CoreForthWordsTest.h  PrimitiveForthWordsTest.cpp
